# coherence-research

./: .gitignore  CLAUDE.md  INTENT.md  README.md  beehive.md  pyproject.toml
.control/: repo.yaml
data/incoming/: delta72_experiments.md
docs/: concept_catalog.md  datasets.md  energy_open_data_manifest.md  math_concepts.md  recent_messages.md
experiments/: credit_card_dashboard.py  ecg_dashboard.py  exp7_energy.py  exp_credit_card.py  exp_ecg.py  exp_nab.py  exp_nasa.py  exp_skab.py  exp_uci_power.py  generate_dashboard.py  math_dashboard.py  math_validation.py  math_visualizations.py  nab_dashboard.py  nasa_dashboard.py  rqa_validation.py  run_all.py  skab_dashboard.py  uci_power_dashboard.py
results/: dashboard.html  exp13_results.json  exp7_results.json  experiment_results.json  rqa_validation.json
results/credit_card/: exp12_results.json
results/ecg/: exp11_results.json
results/math/: math_results.json
results/skab/: exp9_results.json
results/uci_power/: exp10_results.json
scripts/: embed_concepts.py  exp_eeg.py  validate_web.py
src/delta72/: __init__.py  bocpd.py  engine.py  ergodic.py  extended_operators.py  granger.py  info_geometry.py  koopman.py  lyapunov.py  phase_space.py  rmt.py  rqa.py  signals.py  stochastic_resonance.py  tda.py  transfer_entropy.py  wavelet.py
workloads/: delta72_gpu.py
