[project]
name = "allison-research"
version = "0.1.0"
description = "Delta.72 coherence framework — GPU experiment suite"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "torch>=2.2",
    "pydantic>=2.6",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=13.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = ["ipython", "ruff", "mypy", "pytest>=8.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
